@@ -1,8 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
-    xmlns:plone="http://namespaces.plone.org/plone"
-    >
+    xmlns:plone="http://namespaces.plone.org/plone">
 
     <!-- PloneMeeting-specific viewlets -->
     <browser:viewlet
@@ -39,12 +38,6 @@
         name="plone.abovecontenttitle.documentactions"
         manager="plone.app.layout.viewlets.interfaces.IAboveContentTitle"
         class="plone.app.layout.viewlets.content.DocumentActionsViewlet"
-        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
-        permission="zope2.View"/>
-    <browser:viewlet
-        name="plone.belowcontentbody.contenthistory"
-        manager="plone.app.layout.viewlets.interfaces.IAboveContentBody"
-        class="plone.app.layout.viewlets.content.ContentHistoryViewlet"
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View"/>
 
@@ -241,7 +234,7 @@
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View" />
 
-    <!-- the view that display MeetingItem.emergency_changes_history in a popup -->
+    <!-- the view that display MeetingItem.advice_delay_changes_history in a popup -->
     <browser:page
         for="Products.PloneMeeting.interfaces.IMeetingItem"
         name="advice-delay-changes-history"
@@ -295,7 +288,7 @@
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View" />
 
-    <!-- the view that display MeetingItem.emergency_changes_history in a popup -->
+    <!-- the view that display MeetingItem.item_completeness_changes_history in a popup -->
     <browser:page
         for="Products.PloneMeeting.interfaces.IMeetingItem"
         name="item-completeness-history"
