@@ -724,7 +724,7 @@ document.location.reload(true);
                     isDataChange python: event['action'] == '_datachange_'"
         tal:attributes="class python:test(odd, 'even', 'odd')" valign="top">
       <td tal:condition="isDataChange">
-        <span i18n:translate="data_change"></span>
+        <span i18n:translate="data_change" i18n:domain="imio.history"></span>
         <img tal:condition="python: member.has_role('Manager')" style="cursor:pointer"
              tal:attributes="src string:$portal_url/delete_icon.png;
                              onClick python: 'deleteEvent(\'%s\', \'%s\')' % (context.UID(), event['time'])"/>
